# delta_robot_ros2

./: CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt
config/: delta_robot_controllers.yaml  joint_state.yml
docker/: .env  Dockerfile  docker-compose.yml
docs/: artickle.md  commands.md
launch/: delta_robot_run.py
rviz/: base.rviz
scripts/: camera.py  delta_robot_controller.py  dinamic_tf.py  kinematic.py  user_gui.py
urdf/: base.xacro  common_macro.xacro  delta_robot.xacro  leg.xacro  platform.xacro  robot_control.xacro
