<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

<!-- *********************************************************************** -->

  <name>delta_robot_ros2</name>
  <version>0.0.0</version>
  <description>Delta robot base</description>
  <maintainer email="anton42@yandex.ru">root</maintainer>
  <license>MIT License</license>

<!-- *********************************************************************** -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>ament_python</buildtool_depend> -->

<!-- *********************************************************************** -->

  <depend>ros2launch</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>


  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
<!-- *********************************************************************** -->

  <!-- <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend> -->

<!-- *********************************************************************** -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
